[package]
name = "gpui-component-story-web"
version = "0.5.1"
publish = false
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
gpui.workspace = true
gpui-component = { path = "../ui", default-features = false }
gpui-component-assets.workspace = true
gpui-component-story = { path = "../story", default-features = false }

# Web specific dependencies
console_error_panic_hook = "0.1"
log.workspace = true
tracing-wasm = "0.2"
console_log = "1.0"
wasm-bindgen = "0.2"

[lints]
workspace = true
